# 114-1-fianl-report

./: .gitignore  README.md  population_analysis.ipynb  population_analysis_old.ipynb  pyproject.toml  taiwan_ltc_map.html  程式用-各縣市鄉鎮市區土地面積及人口密度.csv  程式用-縣市人口按性別及五齡組.csv
.cursor/rules/: jupter-coding-rule.mdc  rule.mdc
.github/prompts/: plan-statisticalAnalysisEnhancement.prompt.md
data/: 程式用-各縣市鄉鎮市區土地面積及人口密度.csv
fonts/: README.md
