[project]
name = "114-1-final-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nbconvert[webpdf]>=7.16.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
